--- a/.gitignore
+++ b/.gitignore
@@ -32,5 +32,5 @@ build/
 ### VS Code ###
 .vscode/
 mongodb_data
-/src/main/resources/application-dev.yml
-/src/main/resources/application-prod.yml
+#/src/main/resources/application-dev.yml
+#/src/main/resources/application-prod.yml
